# sivycord

./: .gitignore  ADMIN_FEATURES.md  ADMIN_GUIDE.md  HOW_TO_BECOME_ADMIN.ps1  IROH_API_REFERENCE.md  README.md  WHAT_NOW.ps1  admin_tester.ps1  make_admin.ps1  make_admin.sql
app/: index.html  package-lock.json  package.json  run-two-instances.mjs  vite.config.ts
app/public/: tictactoe-plugin.html  wasm-plugin-fixture.html
app/src/: App.tsx  index.css  main.tsx  store.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: channels.rs  dns.rs  docs.rs  identity.rs  isolation.html  lib.rs  moq.rs  roles.rs  state.rs  subscriptions.rs  voice.rs
app/src/components/: AddServerModal.tsx  AdminPanel.tsx  AuthScreen.tsx  ChannelPluginView.tsx  ChannelSettingsModal.tsx  ChannelSidebar.tsx  ChatArea.tsx  CommandPallete.tsx  CreateCategoryModal.tsx  CreateChannelModal.tsx  EmojiPicker.tsx  MainLayout.tsx  MemberListPanel.tsx  MessageContent.tsx  P2PInviteModal.tsx  PluginStoreModal.tsx  ScreenShareView.tsx  ServerGrid.tsx  ServerSidebar.tsx  SetupScreen.tsx  TitleBar.tsx  UserSettingsModal.tsx  VoiceStatusBar.tsx
app/src/components/add-server/: AddServerChoice.tsx  AddServerLegacy.tsx  AddServerP2PCreate.tsx  AddServerP2PJoin.tsx
app/src/components/admin/: BotsTab.tsx  FederationTab.tsx  InvitesTab.tsx  RolesTab.tsx  ServerTab.tsx  Sidebar.tsx  UsersTab.tsx
app/src/components/chat/: ChatHeader.tsx  ChatInput.tsx  ChatPinsPanel.tsx  ChatStreamGrid.tsx  MessageItem.tsx  MessageList.tsx
app/src/components/modals/: UserProfileModal.tsx
app/src/hooks/: talkingStore.ts  useHotkey.ts  useVoice.ts  voiceHelpers.ts
app/src/lib/: crypto.ts
app/src/types/: api.ts  index.ts  models.ts  p2p-channels.ts  p2p-identity.ts  p2p-roles.ts  p2p-voice.ts  permissions.ts  ws.ts
server/: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  docker-compose.yml  install.ps1  install.sh
server/migrations/: 001_initial.sql  002_voice_channels.sql  003_users.sql  004_uploads.sql  005_emoji.sql  006_message_avatar.sql  007_server_settings.sql  008_roles_permissions.sql  009_admin_features.sql  010_sound_chance.sql  011_bots.sql  012_e2e_encryption.sql  013_federation.sql  014_multi_server.sql  015_message_edit.sql  016_reactions.sql  017_pinned_messages.sql  018_timeout.sql  019_categories.sql  020_channel_overrides.sql  021_wasm_plugins.sql
server/src/: db.rs  main.rs  models.rs  permissions.rs  state.rs  token.rs  ws.rs
server/src/entities/: audit_log.rs  ban.rs  bot.rs  category.rs  channel.rs  channel_override.rs  custom_emoji.rs  federated_channel.rs  federation_peer.rs  invite_code.rs  message.rs  mod.rs  reaction.rs  role.rs  server.rs  server_member.rs  upload.rs  user.rs  user_key.rs  user_role.rs  webhook.rs
server/src/routes/: audit_logs.rs  auth.rs  bots.rs  categories.rs  channels.rs  emoji.rs  encryption.rs  federation.rs  invite.rs  members.rs  messages.rs  mod.rs  reactions.rs  roles.rs  server_info.rs  servers.rs  stats.rs  uploads.rs  webhooks.rs
(+16 files in other folders)
