[package]
name = "sivyspeak-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
futures = "0.3"
dashmap = "6"
argon2 = "0.5"
jsonwebtoken = "9"
bitflags = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }

