[package]
name = "sivyspeak-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
# Keep sqlx for SQLite migrations (compatible with sea-orm's internal sqlx)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
time = "=0.3.36" # Pin time to avoid edition 2024 issues
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
futures = "0.3"
dashmap = "6"
argon2 = "0.5"
jsonwebtoken = "9"
bitflags = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
subtle = "2"
tower = { version = "0.5", features = ["timeout"] }

