[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
hickory-resolver = "0.24"
iroh = "0.23"
iroh-docs = "0.23"
iroh-gossip = "0.23"
iroh-blobs = { version = "0.23", features = ["fs-store"] }
iroh-base = "0.23"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3"
keyring = "3"
hex = "0.4"
cpal = "0.15"
opus = "0.3"
nnnoiseless = "0.5"
